# marvel_characters

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bandit.toml  compose.yml  junit.xml  justfile  pyproject.toml  raw_run.sh  requirements.txt
.github/shared/setup/: action.yaml
.github/workflows/: ci.yaml  test_dockerfile.yaml
conf/base/: catalog.yml
docs/source/: conf.py  index.rst
src/marvel_characters/: __init__.py  __main__.py  generate_raw_data.py  main.py  marvel.py  settings.py
src/marvel_characters/charts/: main.py
src/marvel_characters/charts/templates/: index.html  theme.yaml
src/marvel_characters/kedro_datasets/bokeh/: html_dataset.py
src/marvel_characters/pipelines/data_processing/: intermediate.py  nodes.py  pipeline.py  reporting.py
src/source/: conf.py  index.rst
tests/: test_marvel_characters.py
